--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ mcp>=1.0.0
 pydantic>=2.0.0
 httpx>=0.27.0
 sqlmodel>=0.0.27
+python-dotenv==1.2.1
+langchain==1.1.0
+langgraph==1.0.4
+openai==2.8.1
+langchain-openai>=0.3.0
