--- a/overview-console/package.json
+++ b/overview-console/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "quart-react-demo",
+  "name": "ticket-overview-console",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:overview": "vite --config vite.overview.config.js",
     "build": "vite build",
-    "build:overview": "vite build --config vite.overview.config.js",
-    "preview": "vite preview",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.47.0",
     "@fluentui/react-icons": "^2.0.239",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
