--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:e2e:report": "playwright show-report",
-    "ollama:start": "ollama serve",
-    "ollama:pull": "ollama pull llama3.2:1b",
-    "ollama:status": "curl -s http://localhost:11434/api/tags || echo 'Ollama not running'"
+    "test:e2e:report": "playwright show-report"
   },
   "keywords": [
     "quart",
