--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,345 @@
-quart>=0.19.6
-quart-cors>=0.7.0
-hypercorn>=0.17.0
-mcp>=1.0.0
-pydantic>=2.0.0
-httpx>=0.27.0
-sqlmodel>=0.0.27
-python-dotenv==1.2.1
-fastmcp>=2.4.0
-langchain==1.1.0
-langgraph==1.0.4
+accelerate==1.11.0
+aiocache==0.12.3
+aiofiles==25.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.0
+aiosignal==1.3.2
+altair==4.2.2
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anthropic==0.71.0
+antlr4-python3-runtime==4.9.3
+anyio==4.11.0
+asgiref==3.8.1
+astor==0.8.1
+attrs==24.3.0
+Authlib==1.6.5
+azure-communication-callautomation==1.4.0b1
+azure-communication-phonenumbers==1.1.0
+azure-core==1.32.0
+azure-core-tracing-opentelemetry==1.0.0b11
+azure-cosmos==4.7.0
+azure-data-tables==12.7.0
+azure-eventgrid==4.20.0
+azure-functions==1.21.3
+azure-identity==1.19.0
+azure-monitor-opentelemetry==1.6.3
+azure-monitor-opentelemetry-exporter==1.0.0b32
+azure-storage-blob==12.23.1
+backports.tarfile==1.2.0
+beartype==0.22.5
+beautifulsoup4==4.13.3
+beets==1.6.0
+bitsandbytes==0.42.0
+blake3==1.0.8
+blinker==1.9.0
+Brotli==1.1.0
+build==1.0.3
+CacheControl==0.14.0
+cachetools==6.2.2
+cbor2==5.7.1
+certifi==2025.1.31
+cffi==1.16.0
+charset-normalizer==3.3.2
+chevron==0.14.0
+cleo==2.1.0
+click==8.1.7
+cloudpickle==3.1.2
+colorlog==6.10.1
+compressed-tensors==0.12.2
+confuse==2.0.1
+crashtest==0.4.1
+cryptography==43.0.3
+curl_cffi==0.7.1
+cyclopts==4.2.3
+Cython==3.1.1
+dacite==1.9.2
+datasets==4.4.1
+Deprecated==1.2.14
+depyf==0.20.0
+dill==0.4.0
+diskcache==5.6.3
+distlib==0.3.6
+distro==1.9.0
+dnspython==2.8.0
+docling-core==2.51.1
+docling-ibm-models==3.10.2
+docling-parse==4.7.1
+docstring_parser==0.17.0
+docutils==0.22.3
+dulwich==0.21.7
+einops==0.8.1
+email-validator==2.3.0
+entrypoints==0.4
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+Faker==38.0.0
+fastapi==0.122.0
+fastapi-cli==0.0.16
+fastapi-cloud-cli==0.5.2
+fastar==0.8.0
+fastjsonschema==2.19.1
+fastmcp==2.13.0.2
+filelock==3.20.0
+filetype==1.2.0
+fixedint==0.1.6
+Flask==3.1.2
+frozenlist==1.5.0
+fsspec==2025.10.0
+gguf==0.17.1
+gitdb==4.0.11
+GitPython==3.1.43
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.3.0
+hf-xet==1.2.0
+hpack==4.1.0
+httpcore==1.0.7
+httptools==0.7.1
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+Hypercorn==0.18.0
+hyperframe==6.1.0
+icloudpd==1.23.4
+idna==3.6
+importlib-metadata==7.0.1
+iniconfig==2.1.0
+installer==0.7.0
+interegular==0.3.3
+isodate==0.7.2
+itsdangerous==2.2.0
+jaconv==0.4.0
+jaraco.classes==3.3.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+jellyfish==1.0.3
+Jinja2==3.1.6
+jiter==0.12.0
+jmespath==1.0.1
+jsonlines==4.0.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-path==0.3.4
+jsonschema-specifications==2024.10.1
+keyring==25.6.0
+langchain==1.0.5
+langchain-core==1.0.4
+langchain-mcp-adapters==0.1.14
+langgraph==1.0.3
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.2
+langgraph-sdk==0.2.9
+langsmith==0.4.42
+lark==1.2.2
+latex2mathml==3.78.1
+Lazify==0.4.0
+llguidance==1.3.0
+llvmlite==0.44.0
+lm-format-enforcer==0.11.3
+loguru==0.7.3
+lxml==6.0.2
+markdown-it-py==3.0.0
+marko==2.2.1
+MarkupSafe==3.0.2
+mcp==1.21.0
+mdurl==0.1.2
+mediafile==0.12.0
+mistral_common==1.8.5
+mlx==0.30.0
+mlx-lm==0.28.3
+mlx-metal==0.30.0
+model-hosting-container-standards==0.1.9
+more-itertools==10.2.0
+mpire==2.10.2
+mpmath==1.3.0
+msal==1.32.0
+msal-extensions==1.3.1
+msgpack==1.0.7
+msgspec==0.20.0
+msrest==0.7.1
+multidict==6.1.0
+multiprocess==0.70.18
+munkres==1.1.4
+musicbrainzngs==0.7.1
+mutagen==1.47.0
+narwhals==1.18.4
+networkx==3.5
+ninja==1.13.0
+ntlm-auth==1.5.0
+numba==0.61.2
+numpy==2.2.0
+oauthlib==3.2.2
+ocrmac==1.0.0
+omegaconf==2.3.0
 openai==2.8.1
-langchain-openai>=0.3.0
+openai-harmony==0.0.8
+openapi-pydantic==0.5.1
+opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
+openpyxl==3.1.5
+opentelemetry-api==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-dbapi==0.48b0
+opentelemetry-instrumentation-django==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-instrumentation-flask==0.48b0
+opentelemetry-instrumentation-psycopg2==0.48b0
+opentelemetry-instrumentation-requests==0.48b0
+opentelemetry-instrumentation-urllib==0.48b0
+opentelemetry-instrumentation-urllib3==0.48b0
+opentelemetry-instrumentation-wsgi==0.48b0
+opentelemetry-resource-detector-azure==0.1.5
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.11.4
+ormsgpack==1.12.0
+outlines_core==0.2.11
+packaging==25.0
+pandas==2.2.3
+partial-json-parser==0.2.1.1.post7
+pathable==0.4.4
+pathvalidate==3.3.1
+pexpect==4.9.0
+pillow==11.0.0
+pkginfo==1.11.1
+platformdirs==4.3.6
+pluggy==1.6.0
+poetry-core==1.9.0
+poetry-plugin-export==1.6.0
+polyfactory==3.0.0
+priority==2.0.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.23.1
+propcache==0.2.1
+protobuf==4.25.5
+psutil==5.9.8
+ptyprocess==0.7.0
+py-cpuinfo==9.0.0
+py-key-value-aio==0.2.8
+py-key-value-shared==0.2.8
+pyarrow==22.0.0
+pybase64==1.4.2
+pyclipper==1.3.0.post6
+pycountry==24.6.1
+pycparser==2.21
+pycryptodomex==3.21.0
+pydantic==2.12.4
+pydantic-extra-types==2.10.6
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.10.1
+pykakasi==2.3.0
+pylatexenc==2.10
+pyobjc-core==12.1
+pyobjc-framework-Cocoa==12.1
+pyobjc-framework-CoreML==12.1
+pyobjc-framework-Quartz==12.1
+pyobjc-framework-Vision==12.1
+pypdfium2==4.30.0
+pyperclip==1.11.0
+pyproject_hooks==1.0.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-docx==1.2.0
+python-dotenv==1.2.1
+python-json-logger==4.0.0
+python-multipart==0.0.20
+python-pptx==1.0.2
+python-slugify==8.0.4
+pytube==15.0.0
+pytz==2024.2
+PyYAML==6.0.1
+pyzmq==27.1.0
+Quart==0.20.0
+RapidFuzz==3.12.1
+rapidocr==3.4.2
+redis==5.2.1
+referencing==0.35.1
+regex==2025.11.3
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-rst==1.3.2
+rich-toolkit==0.17.0
+rignore==0.7.6
+rpds-py==0.22.3
+rtree==1.4.1
+safetensors==0.6.2
+scipy==1.15.2
+semchunk==2.2.2
+sentencepiece==0.2.1
+sentry-sdk==2.46.0
+setproctitle==1.3.7
+shapely==2.1.2
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soundcloud-v2==1.6.0
+soupsieve==2.6
+spotdl==4.2.11
+spotipy==2.25.0
+SQLAlchemy==2.0.45
+sqlmodel==0.0.27
+sse-starlette==3.0.3
+starlette==0.50.0
+streamlit==1.41.1
+streamlit-aggrid==1.0.5
+supervisor==4.3.0
+sympy==1.14.0
+syncedlyrics==1.0.1
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==9.0.0
+text-unidecode==1.3
+tiktoken==0.12.0
+tokenizers==0.22.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.3
+toolz==1.0.0
+torch==2.9.0
+torchaudio==2.9.0
+torchvision==0.24.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.57.1
+tree-sitter==0.25.2
+tree-sitter-c==0.24.1
+tree-sitter-java==0.23.5
+tree-sitter-javascript==0.25.0
+tree-sitter-python==0.25.0
+tree-sitter-typescript==0.23.2
+trove-classifiers==2024.1.8
+typer==0.19.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2024.2
+Unidecode==1.3.8
+urllib3==2.1.0
+uvicorn==0.38.0
+uvloop==0.22.1
+virtualenv==20.23.1
+vllm==0.11.2
+watchfiles==1.1.1
+websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==1.16.0
+wsproto==1.2.0
+xattr==1.1.0
+xgrammar==0.1.25
+xlsxwriter==3.2.9
+xxhash==3.6.0
+yarl==1.18.3
+yt-dlp==2025.7.21
+ytmusicapi==1.10.1
+zipp==3.17.0
+zstandard==0.25.0
