--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,14 @@
   "dependencies": {
     "@fluentui/react-components": "^9.47.0",
     "@fluentui/react-icons": "^2.0.239",
+    "@nivo/axes": "^0.99.0",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/legends": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@nivo/sankey": "^0.99.0",
+    "@nivo/stream": "^0.99.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6"
