--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-# Azure OpenAI Configuration
-# Get your API key from: https://portal.azure.com
+# OpenAI Configuration
+# Get your API key from: https://platform.openai.com/api-keys
 
-# Your Azure OpenAI API key (Bearer token)
-AZURE_API_KEY=your-api-key-here
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_MODEL=gpt-4o-mini
+# Optional override
+# OPENAI_BASE_URL=https://api.openai.com/v1
 
 # Optional: Frontend build path override
 # FRONTEND_DIST=/path/to/custom/frontend/dist
